--- a/views/auth/registerPeserta.ejs
+++ b/views/auth/registerPeserta.ejs
@@ -83,12 +83,11 @@
             transform: translateY(-2px);
         }
 
-        /* CSS untuk ikon silang */
         .close-icon {
             position: absolute;
             top: 15px;
             right: 15px;
-            font-size: 1.2rem; /* Ukuran font diubah */
+            font-size: 1.2rem; 
             cursor: pointer;
             color: #666;
             transition: color 0.2s ease;
@@ -210,7 +209,6 @@
             const errorDiv = document.getElementById('validation-error');
 
             form.addEventListener('submit', function (event) {
-                // Reset validasi
                 errorDiv.textContent = '';
                 nameInput.classList.remove('is-invalid');
                 emailInput.classList.remove('is-invalid');
