--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,17 +9,30 @@
     <link rel="stylesheet" href="css/vertical-layout-light/style.css">
     <link rel="shortcut icon" href="images/favicon.png" />
     <style>
-        /* Hero Section */
         .hero-section {
             background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/1.png');
             background-size: cover;
             background-position: center;
             height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
             color: white;
+            position: relative;
+        }
+
+        .logo-container {
+            position: absolute;
+            top: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .logo-container img {
+            max-width: 80px;
+            height: auto;
         }
 
         .button-group {
@@ -46,9 +59,6 @@
             color: #212529;
             text-align: center;
             vertical-align: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
             user-select: none;
             background-color: transparent;
             border: 1px solid transparent;
@@ -131,6 +141,10 @@
 
 <body>
     <section class="hero-section text-center d-flex align-items-center justify-content-center">
+        <div class="logo-container">
+            <img src="images/Logo Perpustakaan Medayu.webp" alt="Logo Perpustakaan Medayu">
+        </div>
+        
         <div class="container">
             <h1><b>Satu Aplikasi untuk<br><span class="nowrap-title">Presensi & Laporan Harian</span></b></h1>
             <h4>Catat presensi dan kirim laporan harian langsung dari perangkat Anda, tepat waktu dan terintegrasi.</h4>
