fix: all feature in admin

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -21,7 +21,7 @@
                                     Pembimbing Proses
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">
-                                    <%= countPembimbngProses[0].pembimbing_proses %>
+                                    <%= countPembimbingProses[0].pembimbing_proses %>
                                 </div>
                             </div>
                             <div class="col-auto">
@@ -41,7 +41,7 @@
                                     Pembimbing Aktif
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">
-                                    <%= countPembimbngAKtif[0].pembimbing_aktif %>
+                                    <%= countPembimbingAKtif[0].pembimbing_aktif %>
                                 </div>
                             </div>
                             <div class="col-auto">
